# SerenLexAI

./: .gitignore  Makefile  README.md  package-lock.json
backend/: main.py  pyproject.toml
backend/ai/: tasks.py
backend/alembic/: env.py
backend/alembic/versions/: 99be814f6129_initial_schema.py
backend/api/: actions.py  analyses.py
backend/core/: config.py  database.py  dependencies.py  registry.py
backend/models/: __init__.py  actions.py  analysis.py  base.py  clauses.py  user.py
backend/repositories/: action_repository.py  analysis_repository.py  clause_repository.py
backend/schemas/: actions.py  analysis.py  clauses.py
backend/services/: action_service.py  analysis_service.py  clause_service.py
langgraph-ai/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
langgraph-ai/src/contract_ai/: celery_app.py  run_analysis.py  tasks.py
langgraph-ai/src/contract_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
langgraph-ai/src/contract_ai/agents/anomaly/: contract_anomaly_agent.py
langgraph-ai/src/contract_ai/agents/classification/: clause_classifier_agent.py  document_classifier_agent.py
langgraph-ai/src/contract_ai/agents/risk/: clause_analysis_agent.py  clause_feedback_agent.py
langgraph-ai/src/contract_ai/application/orchestrators/: map_clauses_node.py
langgraph-ai/src/contract_ai/application/state/: contract_state.py
langgraph-ai/src/contract_ai/application/workflows/: contract_analysis_graph.py
langgraph-ai/src/contract_ai/domain/: exceptions.py
langgraph-ai/src/contract_ai/domain/models/: clause.py  clause_classification.py  contract_anomaly.py  contract_structure.py
langgraph-ai/src/contract_ai/domain/value_objects/: clause_type.py
langgraph-ai/src/contract_ai/infrastructure/: db.py  models.py
langgraph-ai/src/contract_ai/infrastructure/config/: settings.py
langgraph-ai/src/contract_ai/infrastructure/llm/: client.py
langgraph-ai/src/contract_ai/nodes/agents/: risk_node.py  (+4 more)
langgraph-ai/tests/: test_clause_agent.py  test_clause_reconstruction.py
(+197 files in other folders)
